# ftorch_example

./: .gitignore  Dockerfile.cuda  README.md  bk_main.f90  build_container.sh  run.sh
code/: CMakeLists.txt  build.sh  example.py  ftorch_example  gpu_count.cpp  main.f90  main_bk.f90  main_bk_2.f90  run_gpu.sh
code/cpp_test/: gpu_count.cpp  run_gpu.sh
code/f_gpu/: build.sh  main.f90
docker/: Dockerfile  build.sh  run.sh
example/: main.f90
saved_weights/: simple_net.pt  simple_net.pth
weights/: simple_net.pt
